Issue #MAYAM-28 - Garbage Collection and other Replaced new integer(0) in Integer.valueOf(0) instantiating an integer.
commented the line:
receivedCount = receivedCount;
That means nothing in NetworkQueueUpdateDelegate class.